feat: view and edit profile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,9 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     
 }
+/* 
+Theme colors:
+ text-green-900
+  bg-green-300
+  #218e6c
+*/
